Added day 2 p3 notebook

--- a/notebooks/Intro_to_Python_Day2_Pt1.ipynb
+++ b/notebooks/Intro_to_Python_Day2_Pt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56c91176",
+   "id": "91a434d6",
    "metadata": {},
    "source": [
     "# CIC Carpentries Workshop - Day 2 - Part 1\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2b884fd",
+   "id": "e997dca9",
    "metadata": {},
    "source": [
     "## ❓Questions and Objectives for this Notebook\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0dd21be",
+   "id": "7e3d0706",
    "metadata": {},
    "source": [
     "---\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2c2f525",
+   "id": "60ce1b4f",
    "metadata": {},
    "source": [
     "# Numeric Data Types\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47e91355",
+   "id": "c118c524",
    "metadata": {},
    "source": [
     "# Text Data Type\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a916c875",
+   "id": "add1f857",
    "metadata": {},
    "source": [
     "# Checking the format of our data\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dd27665",
+   "id": "591b868d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3c008f6",
+   "id": "6eb3f360",
    "metadata": {},
    "source": [
     "Remember that we can check the type of an object like this:  \n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ab2ad04",
+   "id": "ea6e74fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8daa7d88",
+   "id": "592186c0",
    "metadata": {},
    "source": [
     "Next, let’s look at the structure of our surveys data. In pandas, we can check the type of one column in a DataFrame using the syntax `dataFrameName[column_name].dtype`:"
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa445335",
+   "id": "c6c8ca34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e82798db",
+   "id": "f8747dea",
    "metadata": {},
    "source": [
     "A type ‘O’ just stands for “object” which in Pandas’ world is a string (text)."
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c45b660",
+   "id": "4225f107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad610b40",
+   "id": "52810ace",
    "metadata": {},
    "source": [
     "The type `int64` tells us that Python is storing each value within this column as a 64 bit integer. We can use the `dat.dtypes` command to view the data type for each column in a DataFrame (all at once)."
@@ -175,14 +175,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a11a44d8",
+   "id": "20550b08",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "99603221",
+   "id": "c2d045e0",
    "metadata": {},
    "source": [
     "Note that most of the columns in our Survey data are of type `int64`. This means that they are 64 bit integers. But the weight column is a floating point value which means it contains decimals. The `species_id` and `sex` columns are objects which means they contain strings."
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b65d794f",
+   "id": "47d4240a",
    "metadata": {},
    "source": [
     "---\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15bb2812",
+   "id": "0a935e97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6525739b",
+   "id": "eb16b7e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a86dfb59",
+   "id": "e8e78557",
    "metadata": {},
    "source": [
     "If we divide one integer by another, we get a float. The result on Python 3 is different than in Python 2, where the result is an integer (integer division)."
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec7296b4",
+   "id": "5671f23e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7990d880",
+   "id": "788a274d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebd057fa",
+   "id": "d6e96064",
    "metadata": {},
    "source": [
     "We can still use integer division if we want with the `//` operator (two division symbols). This will apply a division, but throw away the remainder"
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c7f6793",
+   "id": "cd3c59c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c162baf",
+   "id": "0b5ebf3c",
    "metadata": {},
    "source": [
     "We can also convert a floating point number to an integer or an integer to floating point number. Notice that Python by default rounds down when it converts from floating point to integer."
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "392c0f08",
+   "id": "2158cd0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "763ee9d6",
+   "id": "e4e41fbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "244d0fd7",
+   "id": "2046edad",
    "metadata": {},
    "source": [
     "---\n",
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac8f2367",
+   "id": "7c0abe61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,10 +318,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75d1b635",
+   "id": "ae025944",
    "metadata": {},
    "source": [
-    "### ✏️ Quick Chalenge:\n",
+    "### ✏️ Challenge:\n",
     "Try converting the column plot_id to floats using:\n",
     "`surveys_df.plot_id.astype(\"float\")`\n",
     "\n",
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a07b252",
+   "id": "9466e941",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -339,14 +339,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c902f1ff",
+   "id": "2a94dd26",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d5257a07",
+   "id": "74a871a9",
    "metadata": {},
    "source": [
     "# Missing Data Values - NaN\n",
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f68fa18",
+   "id": "419b7e7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "558b51dc",
+   "id": "a6fcfcd9",
    "metadata": {},
    "source": [
     "Dealing with missing data values is always a challenge. It’s sometimes hard to know why values are missing - was it because of a data entry error? Or data that someone was unable to collect? Should the value be 0? We need to know how missing values are represented in the dataset in order to make good decisions. If we’re lucky, we have some metadata that will tell us more about how null values were handled.\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9824704",
+   "id": "75ca6b30",
    "metadata": {},
    "source": [
     "# Where Are the NaN’s?\n",
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f11c7a86",
+   "id": "ecd8b007",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00802330",
+   "id": "7984f075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e230ae40",
+   "id": "341d0800",
    "metadata": {},
    "source": [
     "We can replace all `NaN` values with zeroes using the `.fillna()` method (after making a copy of the data so we don’t lose our work):"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "992ca871",
+   "id": "03d47c86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f79bfd67",
+   "id": "2a6e3ff2",
    "metadata": {},
    "source": [
     "However `NaN` and 0 yield different analysis results. The mean value when `NaN` values are replaced with 0 is different from when `NaN` values are simply thrown out or ignored."
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e544ecd",
+   "id": "eb225e23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53a8fd25",
+   "id": "d641704b",
    "metadata": {},
    "source": [
     "We can fill `NaN` values with any value that we chose. The code below fills all `NaN` values with a mean for all weight values."
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaebc8fa",
+   "id": "65ca4aaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fce83ab4",
+   "id": "5a1daf80",
    "metadata": {},
    "source": [
     "We could also chose to create a subset of our data, only keeping rows that do not contain NaN values.\n",
@@ -472,10 +472,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5d7e9fe",
+   "id": "49613333",
    "metadata": {},
    "source": [
-    "### ✏️ Quick Chalenge: \n",
+    "### ✏️ Challenge: \n",
     "Count the number of missing values per column of the original dataframe `surveys_df`\n",
     "\n",
     "Hint: As with almost everything programming, there are multiple ways to do this.  \n",
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "841a0df5",
+   "id": "5982534f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7910df7c",
+   "id": "9766e099",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4938f4bb",
+   "id": "2215a49d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -510,14 +510,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fa0b503",
+   "id": "f8ad2952",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "748fcfff",
+   "id": "a56f98cb",
    "metadata": {},
    "source": [
     "# Writing Out Data to CSV\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "961f3567",
+   "id": "aa68bc3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70810dd5",
+   "id": "f490e706",
    "metadata": {},
    "source": [
     "Next, let’s drop all the rows that contain missing values. We will use the method `dropna()`. By default, `dropna()` removes rows that contain missing data for even just one column."
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41e3da41",
+   "id": "0f96be5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adcef019",
+   "id": "1bb2d882",
    "metadata": {},
    "source": [
     "If you now type `df_na`, you should observe that the resulting DataFrame has 30676 rows and 9 columns, much smaller than the 35549 row original."
@@ -565,14 +565,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ccc4b79",
+   "id": "c254b501",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "94995ec0",
+   "id": "a0a94588",
    "metadata": {},
    "source": [
     "We can now use the `to_csv()` method to export a DataFrame in CSV format. Note that the code below will by default save the data into the current working directory. We can save it to a different folder by adding the foldername and a slash before the filename: `df.to_csv('foldername/out.csv')`. We use `index=False` so that pandas doesn’t include the index number for each line."
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1016751e",
+   "id": "14f17951",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5bd2013",
+   "id": "10be8c87",
    "metadata": {},
    "source": [
     "We will use this data file later in the workshop. Check out your working directory to make sure the CSV wrote out properly, and that you can open it! If you want, try to bring it back into Python to make sure it imports properly."
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7449832f",
+   "id": "f7023ecd",
    "metadata": {},
    "source": [
     "---\n",
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "208665b6",
+   "id": "a8bcc314",
    "metadata": {},
    "source": [
     "# ❗Key Points\n",
@@ -625,38 +625,6 @@
     "- Make conscious decisions about how to manage missing data.\n",
     "- A DataFrame can be saved to a CSV file using the to_csv function.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df4ca028",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ea7daff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44f0bc45",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1467f2cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
