--- a/notebooks/Intro_to_Python_Day1_Pt1.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt1.ipynb
@@ -29,6 +29,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## ❓Questions and Objectives for this Notebook\n",
+    "What should you be able to answer by the end of this notebook?\n",
+    "### Questions\n",
+    "\n",
+    "- How do I program in Python?\n",
+    "- How can I represent my data in Python?\n",
+    "\n",
+    "### Objectives\n",
+    "\n",
+    "- Describe the advantages of using programming vs. completing repetitive tasks by hand.\n",
+    "- Define the following data types in Python: strings, integers, and floats.\n",
+    "- Perform mathematical operations in Python using basic operators.\n",
+    "- Define the following as it relates to Python: lists, tuples, and dictionaries.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Short Introduction to Programming in Python\n",
     "\n",
     "### Interpreter\n",
@@ -374,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Challenge\n",
+    "##### ✏️ Challenge\n",
     "1. What happens when you execute `a_tuple[1] = 5` vs. `a_list[1] = 5`?\n",
     "2. What does `type(a_tuple)` tell you about `a_tuple`?"
    ]
@@ -455,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Challenge\n",
+    "##### ✏️ Challenge\n",
     "1. First, print the value of the `rev` dictionary to the screen.\n",
     "2. Reassign the value that corresponds to the key `second` so that it no longer reads \"two\" but instead `2`.\n",
     "3. Print the value of `rev` to the screen again to see if the value has changed."
@@ -577,6 +597,25 @@
    "outputs": [],
    "source": [
     "# Make a function to add three numbers and take the average\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ❗Key Points\n",
+    "\n",
+    "- Python is an interpreted language which can be used interactively (executing one command at a time) or in scripting mode (executing a series of commands saved in file).\n",
+    "- One can assign a value to a variable in Python. Those variables can be of several types, such as string, integer, floating point and complex numbers.\n",
+    "- Lists and tuples are similar in that they are ordered lists of elements; they differ in that a tuple is immutable (cannot be changed).\n",
+    "- Dictionaries are data structures that provide mappings between keys and values."
    ]
   }
  ],
