--- a/notebooks/Intro_to_Python_Day1_Pt2.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt2.ipynb
@@ -28,6 +28,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## ❓Questions and Objectives for this Notebook\n",
+    "What should you be able to answer by the end of this notebook?\n",
+    "### Questions\n",
+    "\n",
+    "- How can I import data in Python?\n",
+    "- What is Pandas?\n",
+    "- Why should I use Pandas to work with data?\n",
+    "\n",
+    "### Objectives\n",
+    "- Navigate the workshop directory and download a dataset.\n",
+    "- Explain what a library is and what libraries are used for.\n",
+    "- Describe what the Python Data Analysis Library (Pandas) is.\n",
+    "- Load the Python Data Analysis Library (Pandas).\n",
+    "- Use read_csv to read tabular data into Python.\n",
+    "- Describe what a DataFrame is in Python.\n",
+    "- Access and summarize data stored in a DataFrame.\n",
+    "- Define indexing as it relates to data structures.\n",
+    "- Perform basic mathematical operations and summary statistics on data in a Pandas DataFrame.\n",
+    "- Create simple plots.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Starting with Data\n",
     "\n",
     "### Working with Pandas DataFrames in Python\n",
@@ -280,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Challenge\n",
+    "#### ✏️ Challenge\n",
     "Using our DataFrame `surveys_df`, try out the attributes and methods to see what they return.\n",
     "1. `surveys_df.shape` - take a note of the output of `shape` - what format does it return the shape of the DataFrame in?\n",
     "2. `surveys_df.head(15)`\n",
@@ -573,7 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Challenge\n",
+    "#### ✏️ Challenge\n",
     "These challenge activities involve plotting data. It's often best to create an object to plot first, then call the .plot() method on it (see the skeleton code below with 'avrg_wgt')\n",
     "1. Create a scatter plot of average weight across all species per plot.  \n",
     " - The final plots x-axis should be 'plot', and the y axis should be 'wgt'.  \n",
@@ -630,6 +656,25 @@
     "# Let's plot, you should see x-axis -> year, y-axis -> weight, different lines for plot\n",
     "# You need to use the .unstack() method before the .plot() for this to work\n",
     "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ❗Key Points\n",
+    "- Libraries enable us to extend the functionality of Python.\n",
+    "- Pandas is a popular library for working with data.\n",
+    "- A Dataframe is a Pandas data structure that allows one to access data by column (name or index) or row.\n",
+    "- Aggregating data using the groupby() function enables you to generate useful summaries of data quickly.\n",
+    "- Plots can be created from DataFrames or subsets of data that have been generated with groupby()."
    ]
   }
  ],
