--- a/notebooks/Intro_to_Python_Day1_Pt3.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt3.ipynb
@@ -28,6 +28,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## ❓Questions and Objectives for this Notebook\n",
+    "What should you be able to answer by the end of this notebook?\n",
+    "### Questions\n",
+    "- How can I access specific data within my data set?\n",
+    "- How can Python and Pandas help me to analyse my data?\n",
+    "\n",
+    "### Objectives\n",
+    "- Describe what 0-based indexing is.\n",
+    "- Manipulate and extract data using column headings and index locations.\n",
+    "- Employ slicing to select sets of data from a DataFrame.\n",
+    "- Employ label and integer-based indexing to select ranges of data in a dataframe.\n",
+    "- Reassign values within subsets of a DataFrame.\n",
+    "- Create a copy of a DataFrame.\n",
+    "- Query / select a subset of data using a set of criteria using the following operators: ==, !=, >, <, >=, <=.\n",
+    "- Locate subsets of data using masks.\n",
+    "- Describe BOOLEAN objects in Python and manipulate data using BOOLEANs.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Loading our Data\n",
     "We will continue to use the surveys dataset that we worked with in the last episode. Let's reopen and read in the data again:"
    ]
@@ -168,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Challenge\n",
+    "#### ✏️ Challenge\n",
     "1. What value does the code `a[0]` return?\n",
     "2. How about `a[5]`?\n",
     "3. Why did `a[5]` above return an error?\n",
@@ -492,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Challenge\n",
+    "### ✏️ Challenge\n",
     "1. What happens when you execute the following:\n",
     "    - `surveys_df[0:1]`\n",
     "    - `surveys_df[:4]`\n",
@@ -725,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Challenge\n",
+    "#### ✏️ Challenge\n",
     "1. Select a subset of rows in the `surveys_df` DataFrame that contain data from\n",
     "   the year 1999 and that contain weight values less than or equal to 8. How\n",
     "   many rows did you end up with? What did your neighbor get?\n",
@@ -785,6 +808,23 @@
    "outputs": [],
    "source": [
     "# 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ❗Key Points\n",
+    "- In Python, portions of data can be accessed using indices, slices, column headings, and condition-based subsetting.\n",
+    "- Python uses 0-based indexing, in which the first element in a list, tuple or any other data structure has an index of 0.\n",
+    "- Pandas enables common data exploration steps such as data indexing, slicing and conditional subsetting."
    ]
   }
  ],
