--- a/notebooks/Intro_to_Python_Day1_Pt2.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt2.ipynb
@@ -111,7 +111,7 @@
    "metadata": {},
    "source": [
     "#### About Libraries\n",
-    "![](package.png)\n",
+    "![](../pictures/package.png)\n",
     "\n",
     "A library in Python contains a set of tools (called functions) that perform\n",
     "tasks on our data. Importing a library is like getting a piece of lab equipment\n",
